--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <!-- header start -->
     <header>
         <nav>
             <h3 class="nav-title">G3 Architects</h3>
@@ -30,7 +31,24 @@
             <img src="images/banner.png" alt="">
         </div>
     </header>
+    <!-- header end -->
     <main>
+        <!-- teams section starts -->
+        <section class="team-container">
+            <div class="img-container">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+            <div class="team-content">
+                <h3 class="team-title">Quick list of Our Features</h3>
+                <p class="team-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+
+            </div>
+        </section>
+        <!-- teams section ends -->
     </main>
     <footer>
     </footer>
