--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- header start -->
     <header>
         <nav>
-            <h3 class="nav-title">G3 Architects</h3>
+            <h3 class="section-title">G3 Architects</h3>
             <ul>
                 <li><a href="">Home</a></li>
                 <li><a href="">About</a></li>
@@ -49,6 +49,21 @@
             </div>
         </section>
         <!-- teams section ends -->
+
+        <!-- feature section starts -->
+        <section class="features">
+
+        </section>
+        <!-- feature section ends -->
+
+        <!-- facts section starts -->
+        <section class="facts">
+            <h3 class="section-title">Some Facts</h3>
+            <p class="facts-description">
+                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.
+            </p>
+        </section>
+        <!-- facts section ends -->
     </main>
     <footer>
     </footer>
