sponsored responsive doen

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
         <!-- teams section ends -->
 
         <!-- feature section starts -->
-        <section class="features">
+        <!-- <section class="features">
 
-        </section>
+        </section> -->
         <!-- feature section ends -->
 
         <!-- facts section starts -->
