--- a/index.html
+++ b/index.html
@@ -51,9 +51,37 @@
         <!-- teams section ends -->
 
         <!-- feature section starts -->
-        <!-- <section class="features">
-
-        </section> -->
+        <section class="features">
+            <div class="feature-content">
+                <h3 class="section-title feature-title">Features you will<br> love & enjoy</h3>
+                <p class="feature-description team-description">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
+                </p>
+                <div class="card">
+                    <h4 class="card-title">Dexktop & Mobile Version</h4>
+                    <p class="card-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="card">
+                    <h4 class="card-title">Drag & Drop Builder</h4>
+                    <p class="card-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="card">
+                    <h4 class="card-title">Awesome Modern Design</h4>
+                    <p class="card-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="card">
+                    <h4 class="card-title">Super Easy to Edit</h4>
+                    <p class="card-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+            </div>
+            <div class="feature-image">
+                <img src="images/architect.png" alt="">
+                <div class="ten-years-badge">
+                    <h2>10+Year</h2>
+                    <p>Experience</p>
+                </div>
+            </div>
+        </section>
         <!-- feature section ends -->
 
         <!-- facts section starts -->
